# bio-reasoning

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: code-review.md  docs-review.md  security-audit.md  wiki-lint.md
.claude/skills/: .sync-meta
.claude/skills/commit/: SKILL.md
.github/workflows/: guard-main.yml
configs/: README.md  track_b_system_prompt.txt
configs/sample_submissions/: README.md  track_a_sample_submission.csv  track_b_sample_submission.csv
data/: README.md
docs/: architecture.md  challenge.md  development.md  foundation-models.md  kaggle-rules.md  paperclip-demo.md  perturb-seq-lane-decision.md  roadmap.md  track-a-approach.md  track-b-approach.md  where-things-live.md
docs/raw/: README.md
docs/source/: karpathy-llm-wiki.md  qmd.md
docs/wiki/: README.md  home.md  index.md
knowledge/raw/: README.md
knowledge/source/: 2016-dixit-perturb-seq.md  2017-klann-ceres-epigenome-screen.md  2020-borys-crispr-regulatory-elements.md  2021-nguyen-scrna-grn-survey.md  2021-papalexi-eccite-seq-immune-checkpoints.md  2022-replogle-genome-scale-perturb-seq.md  2023-bunne-cellot-neural-ot.md  2023-roohani-gears.md  2023-shojaee-cict-grn-scrnaseq.md  2024-connell-chemprobe.md  2024-heimberg-scimilarity.md  2024-huang-cyclecdr.md  2024-jiang-scpram-perturbation-response.md  2024-kim-graybox-boolean-drug-response.md  2024-levine-cell2sentence.md  2024-rosen-saturn-cross-species-embeddings.md  2024-skokgibbs-pmf-grn.md  2024-wu-perturbench.md  2024-xu-cellcap.md  2025-aguirre-grn-perturbation-distribution.md  2025-ahlmann-eltze-dl-perturbation-vs-linear.md  2025-binan-crispr-spatial-macrophage-circuits.md  2025-chen-omiclip-visual-omics.md  2025-denadel-scfm-pretraining-scaling.md  2025-elmarakeby-scfm-cancer-outcomes.md  2025-gilpin-cell-as-token.md  2025-gonzalez-pdgrapher.md  2025-grabski-rna-fingerprinting.md  2025-he-morph-perturbation-prediction.md  2025-he-squidiff-diffusion-perturbation.md  2025-hu-grn-perturbation-cell-fate.md  2025-hu-scilama-llm-gene-embeddings.md  2025-huang-biomni-biomedical-agent.md  2025-kalfon-scprint-gene-networks.md  2025-kedzierska-scfm-zero-shot.md  2025-li-llms-meet-virtual-cell-survey.md  2025-li-sckgbert-knowledge-enhanced-fm.md  2025-liu-variational-causal-perturbation.md  2025-madhu-heist-spatial-graph-fm.md  2025-phillips-synthpert-reasoning-traces.md  (+24 more)
knowledge/wiki/: README.md  home.md  index.md  log.md
mlgenx/: __init__.py  parsing.py  prompts.py
models/: README.md
notebooks/: 01-eda-track-a.ipynb
outputs/: README.md
reports/: progress-report.md  public-readiness-audit.md  technical-report.md
scripts/: apply_floor_to_prior.py  build_external_label_store.py  build_traxler_labels.py  char_ngram_ensemble_ood_val.py  coessentiality_dir_eval.py  core_de_eval.py  de_ceiling_probe.py  de_dir_weight_sweep.py  de_logprob_probe.py  de_retrieval_dir_validation.py  de_retrieval_head_to_head.py  dir_ceiling_probe.py  direction_fusion_eval.py  external_channel_ood_val.py  family_retrieval_eval.py  fetch_tahoe_drug_targets.py  field_gap_probe.py  gene_embedding_eval.py  make_submission.py  marginal_de_eval.py  marginal_de_head_to_head.py  ood_val_baselines.py  paperclip_demo.py  perturb_seq_transfer_probe.py  predict.py  prepare_data.py  richer_marginal_de_eval.py  self_improve_loop.py  sweep_blend_alpha.py  tabpfn_dir_eval.py  tabpfn_predictor_eval.py  tahoe_transfer_probe.py  tf_regulon_coverage.py  track_a_char_ngram_submission.py  track_a_de_dir_submission.py  track_a_error_structure.py  track_a_external_de_submission.py  track_a_prior_baseline.py  track_a_prior_submission.py  track_a_prompt_only.py  (+14 more)
scripts/git-hooks/: no-direct-push-to-main.sh
scripts/smoke/: common.py  provider_smoke.py  track_schema_smoke.py
scripts/tools/: __init__.py  direction_prior.py  gene_info.py  protein_interactions.py  train_data_lookup.py
src/bio_reasoning/: main.py
submissions/: README.md
tests/: conftest.py  test_agentic_allowed_data_compliance.py  test_agentic_empty_eval_rootcause.py  test_coessentiality.py  test_contrastive_context.py  test_core_de_scorer.py  test_de_ceiling.py  test_de_logprob.py  test_dir_channels.py  test_direction_channels.py  test_direction_fusion.py  test_direction_prior.py  test_direction_stacker.py  test_e2e_track_a_prior_baseline.py  test_error_structure.py  test_essentiality.py  test_evaluate.py  test_external_labels.py  test_family_retrieval.py  test_functional_pair_features.py  test_fuse.py  test_gate_external_fold.py  test_gene_embeddings.py  test_gene_function.py  test_go_terms.py  test_kaggle_metrics.py  test_llm_clients.py  test_loop_concurrency_default.py  test_loop_deadlock_regression.py  test_marginal_properties.py  test_neighbor_retrieval.py  test_ood_val_baselines.py  test_openai_compat.py  test_pair_features.py  test_paperclip.py  test_retrieval_agent.py  test_split.py  test_string_graph.py  test_submission_frame.py  test_submit_graded.py  (+40 more)
(+194 files in other folders)
