[project]
name = "bio-reasoning"
version = "0.1.0"
description = "BioReasoning Challenge 2026 (MLGenX @ ICLR 2026)"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bio_reasoning"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.11"
files = ["src/bio_reasoning"]
ignore_missing_imports = true
