[project]
name = "bio-reasoning"
version = "0.1.0"
description = "BioReasoning Challenge 2026 (MLGenX @ ICLR 2026)"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.54.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=1.26",
    "openai>=2.24.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bio_reasoning", "mlgenx"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "kaggle>=2.2.1",
]
track-b = [
    "dspy>=3.1.3",
]
eval = [
    "scikit-learn>=1.7.0",
]
azure = [
    "azure-identity>=1.23.0",
]
serve = [
    "vllm>=0.16.0",
]

[tool.uv]
# Install the test-required groups by default so `uv run pytest` collects the full
# suite (eval → sklearn, track-b → dspy). Without these, test collection fails on
# ModuleNotFoundError. azure/serve stay opt-in (deployment-only, not needed for tests).
default-groups = ["dev", "eval", "track-b"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W"]
ignore = ["E501"]  # line length handled by black

[tool.mypy]
python_version = "3.11"
files = ["src/bio_reasoning"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=bio_reasoning --cov-report=term-missing"

[tool.coverage.run]
source = ["src/bio_reasoning"]
branch = true

[tool.coverage.report]
show_missing = true
